<resources>

    <string name="get_data_section">Real Time Data</string>
    <string name="home_section1">Home</string>
    <string name="graph_data_section">Graph Stored Data</string>

    <string name="from_date">From Date mm.dd.yy</string>
    <string name="to_date">To Date mm.dd.yy</string>
    <string name="from_time">From Time hh:mm</string>
    <string name="to_time">To Time hh:mm</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_name">Kepros</string>
    <string name="action_settings">Settings</string>
    <string name="textBluetooth">Status: -</string>
    <string name="buttonBTon">Turn On</string>
    <string name="buttonBToff">Turn Off</string>
    <string name="btList">List Paired Devices</string>
    <string name="buttonBTFind">Search New Devices / Cancel</string>

    <string name="buttonBTSwitch">Settings</string>

    <string name="buttonDataOn">Data Recieve</string>
    <string name="buttonDataOff">Data Disconnect</string>
    <string name="bluetoothDataRec">Data = ????</string>



</resources>
