<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#e0e0e0"
    android:id="@+id/bluetooth_frame">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">


<TextView
        android:id="@+id/textbluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textBluetooth" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp" >

        <Button
            android:id="@+id/buttonBTon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonBTon" />

        <Button
            android:id="@+id/buttonBToff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonBToff" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp" >

        <Button
            android:id="@+id/pairedbtList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btList" />

        <Button
            android:id="@+id/searchbuttonBTFind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonBTFind" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="fill_parent"
            android:layout_height="200dp" >

        </ListView>

    </LinearLayout>
<!--
        <FrameLayout
            android:layout_width="321dp"
            android:layout_height="163dp"
            android:layout_gravity="center_horizontal|top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/headerBluetooth"
                android:layout_gravity="left|center_vertical"
                android:text="Bluetooth"
                android:textColor="#010101"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="On"
                android:id="@+id/buttonBTon"
                android:layout_gravity="center" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="Off"
                android:id="@+id/buttonBToff"
                android:layout_gravity="right|center_vertical" />

        </FrameLayout>

        -->
    </FrameLayout>
</RelativeLayout>

