<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp">

        <com.jjoe64.graphview.GraphView
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:visibility="visible"
                android:id="@+id/graph1" />

        <com.jjoe64.graphview.GraphView
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:id="@+id/graph2" android:layout_below="@+id/graph1"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_below="@+id/graph2" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:weightSum="1" android:id="@+id/lin1">
        <EditText
                android:id="@+id/etxt_fromtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:inputType="time"
                android:hint="@string/from_time" />

        <EditText
                android:id="@+id/etxt_totime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:inputType="time"
                android:hint="@string/to_time" />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_below="@+id/lin1" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:weightSum="1" android:id="@+id/lin2">
        <EditText
                android:id="@+id/etxt_fromdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:inputType="date"
                android:hint="@string/from_date" />

        <EditText
                android:id="@+id/etxt_todate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:inputType="date"
                android:hint="@string/to_date" />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_below="@+id/lin2" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:weightSum="1" android:id="@+id/lin3">
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Get"
                android:id="@+id/get"/>
    </LinearLayout>
</RelativeLayout>
